Fix mobile main menu.
Main menu was broken on mobiles.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,7 +49,6 @@
         display: none;
     }
 
-
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
@@ -88,9 +87,9 @@
             padding-bottom: 5px;
         }
 
-        .page-link {
+        i {
             display: block;
-            color: $brand-color;
+            color: $post-link;
             padding: 5px 10px;
         }
     }
@@ -203,7 +202,7 @@
 @include media-query($on-palm) {
     .footer-col-1,
     .footer-col-2 {
-        float: none;
+        float: left;
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
         width:         calc(50% - (#{$spacing-unit} / 2));
     }
@@ -212,6 +211,7 @@
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
+
 }
 
 
